3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/attack.c: Pass in skill (string) to change_exp instead of skop->skill -
   skop can be null, resulting in a crash here.  In addition, other calls
   to change_exp in this function use the skill string, so it is good to
   be consistent.
MSW 2004-09-09

server/c_wiz.c: Don't forget to skip blanks after reading item number or stack
   position. Works better for commands like patch :)
Ryo 2004-09-06

common/object.c: Fix insert_ob_in_map so right coordinates and map
   value are used on GET_MAP_OB call - was using values before changes
   for tiling were applied.
MSW 2004-09-02

server/player.c: allow to 'talk' to players with ambiguous names: use a
   perfect match even if other partial matches exist.
Andreas Kirschbaum 2004-08-30

include/define.h
server/shop.c
   add new flags F_IDENTIFIED and F_NOT_CURSED to query_cost() to pretend
   the item to be identified/not cursed or damned.
server/alchemy.c
   fix possible abuse of shadow alchemy: do not allow the generated items
   to be more valuable than the ingredients when using alternate recipes.
Andreas Kirschbaum 2004-08-24

common/map.c: Add extra check to make sure variable is set before calling
   strcmp - this can happen if the map file that is being loaded is
   0 bytes - without this, the server would crash.
MSW 2004-08-23


server/disease.c: fix crash when casting diseases on tiled maps.
server/move.c: fix problem with multi-tile monsters and pass thru walls.
server/spell_effect.c: fix magic walls sometimes appearing in wrong place.
Andreas Kirschbaum 2004-08-20

common/loader.l, loader.c: in check_loaded_object() - don't give spell